# Spooky-Caspar

./: .gitignore  Cargo.toml  README.md
src/: build.rs  main.rs  utils.rs
src/action/: evade.rs  mod.rs
src/action/champions/: karthus.rs  mod.rs  xerath.rs
src/gui/: loader.rs  menu.rs  mod.rs
src/io/: input.rs  mod.rs  output.rs
src/memory/: mod.rs
src/overlay/: mod.rs
src/sdk/: champion_database.toml  game.rs  minion_manager.rs  mod.rs  offsets.rs  player.rs  player_manager.rs  walls.rs
src/tests/: mod.rs  orbwalker.rs  screen_size.rs
toyarms-fork/: Cargo.toml
toyarms-fork/src/: lib.rs  pattern_scan_utils.rs
