[package]
name = "spooky_caspar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For user config
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"
# Toyarms fork removal of unused functions and new read buffer function
external = { path = "toyarms-fork" }
windows-sys = { version = "0.48.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
speedy2d = "1.12.0"
egui_sdl2_gl = "0.23.0"
image = "0.23.14"
log = "0.4.20"
env_logger = "0.10.1"
ncollide2d = "0.33.0"
hardware-id = "0.3.0"
